:bug: Fix tablet breakpoint definition

--- a/src/app/courses-overview/courses-overview.component.scss
+++ b/src/app/courses-overview/courses-overview.component.scss
@@ -67,7 +67,7 @@
     }
 }
 
-@media (max-width: $media-breakpoint-md) {
+@media (max-width: $media-breakpoint-md - 1) {
     .courses-overview {
         .course-tags-container {
             .course-tags {
