--- a/src/app/main-page/main-page-section/main-page-section.component.scss
+++ b/src/app/main-page/main-page-section/main-page-section.component.scss
@@ -48,7 +48,7 @@ $main-page-text-color: #fff;
     }
 }
 
-@media (max-width: $media-breakpoint-md) {
+@media (max-width: $media-breakpoint-md - 1) {
     .main-page-section-background {
         .main-page-section-container {
             &.first-section-container {
