--- a/src/app/sites/team/teacher-details/teacher-details.component.scss
+++ b/src/app/sites/team/teacher-details/teacher-details.component.scss
@@ -28,7 +28,7 @@
     }
 }
 
-@media (max-width: $media-breakpoint-md) {
+@media (max-width: $media-breakpoint-md - 1) {
     .teacher-content-container {
         .teacher-content {
             &>.teacher-heading {
