--- a/src/app/sites/stage/stage.component.scss
+++ b/src/app/sites/stage/stage.component.scss
@@ -54,7 +54,7 @@
     }
 }
 
-@media (max-width: $media-breakpoint-md) {
+@media (max-width: $media-breakpoint-md - 1) {
     .performances-container {
         padding: 50px 0;
         .performance-poster-container {
