--- a/src/app/components/schedule/schedule.component.scss
+++ b/src/app/components/schedule/schedule.component.scss
@@ -77,6 +77,9 @@
     .schedule-component {
         .schedule-container {
             .day-container {
+                &.day-container-empty {
+                    display: none;
+                }
                 .day-title {
                     font-size: 1.5em;
                 }
