Impressumsfarben geändert und Download Links eingefügt

--- a/src/app/sites/courses/course-information/course-information.component.html
+++ b/src/app/sites/courses/course-information/course-information.component.html
@@ -8,5 +8,8 @@
     <a name="preise"></a>
     <h2 id="preise">Preise</h2>
     <div class="courses-gerneral-description" [innerHTML]='text'></div>
+    <a class="download-link" href="" download="Anmeldung_Tanztheater_Hanke">Anmeldung Kinder zum Download hier klicken</a><br>
+    <a class="download-link" href="" download="Anmeldung_Tanztheater_Hanke">Anmeldung Erwachsene zum Download hier klicken</a>
+    <!--Todo: pdf einfügen-->
   </div>
 </div>
