--- a/src/app/sites/courses/course-information/course-information.component.scss
+++ b/src/app/sites/courses/course-information/course-information.component.scss
@@ -14,6 +14,10 @@
   }
 }
 
+.download-link {
+  color: $download-link-color;
+}
+
 @media (min-width: $media-breakpoint-md) {
   .header-image {
     display: block;
