--- a/src/variables.scss
+++ b/src/variables.scss
@@ -10,6 +10,7 @@ $main-text-color-on-light-bg: #000000;
 $post-seperator-color: #8C8C8C;
 $accent-color-1: #eb484d;
 $main-background-color-dark: #000000;
+$download-link-color: #dbd6d6;
 
 /*---------------------------
 |   RESPONSIVE BREAKPOINTS  |
