--- a/src/variables.scss
+++ b/src/variables.scss
@@ -10,6 +10,10 @@ $main-text-color-on-light-bg: #000000;
 $post-seperator-color: #8C8C8C;
 $accent-color-1: #eb484d;
 $main-background-color-dark: #000000;
+$background-color-dark-2: #0f0f0f;
+$border-color-dark-2: #2c2c2c;
+$link-color: #4454e6;
+$link-color-hover: #0934c4;
 
 /*---------------------------
 |   RESPONSIVE BREAKPOINTS  |
