:sparkles: Subpages for blog posts

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -29,7 +29,7 @@
           <a class="navbar-navigation-link dropdown-link" routerLink="/kurs-informationen" (click)="toggleMobileNav()">Preise und Stundenpläne</a>
         </div>
       </div>
-      <a class="navbar-navigation-link" routerLink="/aktuelles" (click)="toggleMobileNav()">
+      <a class="navbar-navigation-link" routerLink="/blog" (click)="toggleMobileNav()">
         Aktuelles
       </a>
       <a class="navbar-navigation-link" routerLink="/auftritte" (click)="toggleMobileNav()">
