--- a/src/app/sites/stage/performance/performance.component.scss
+++ b/src/app/sites/stage/performance/performance.component.scss
@@ -8,17 +8,23 @@
     animation-fill-mode: forwards; 
     .performance-content-container {
         color: $main-text-color-on-dark-bg;
+        text-align: center;
         .performance-title {
-            text-align: center;
             text-transform: uppercase;
             margin: 20px 0 0 0;
         }
         .performance-date {
-            text-align: center;
+            display: inline-block;
+            margin: 0 auto 50px auto;
             font-size: 18px;
-            margin-bottom: 50px;
+            display: inline-block;
+            font-size: 12px;
+            padding: 0 10px;
+            font-weight: 600;
+            border: 1px solid $main-text-color-on-dark-bg;
         }
         .performance-description {
+            text-align: left;
             margin-top: 50px;
             margin-bottom: 100px;
         }
