--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,11 @@ body, html {
     background-color: #000;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 .header-image {
     .header-image-title {
         position: absolute;
