--- a/src/app/sites/stage/stage.component.html
+++ b/src/app/sites/stage/stage.component.html
@@ -1,6 +1,6 @@
 <!--<div class="header-image" [ngStyle]="getBackgroundStyle(backgroundImage)"></div>-->
 <div class="performances-container">
-  <a *ngFor="let performance of performances, let i = index" class="performance-poster-container" [routerLink]="['/auftritte', i]" [ngStyle]="getBackgroundStyle(performance.poster)">
+  <a *ngFor="let performance of performances, let i = index" class="performance-poster-container" [routerLink]="performance.routerLink" [ngStyle]="getBackgroundStyle(performance.poster)">
 
     <div class="performance-poster-mask"></div>
     <div class="performance-poster-label-container">
