--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -12,7 +12,7 @@ div {
 	//padding-top: 25px;
     //height: 0;
     height: 300px;
-    .video-iframe {
+    iframe {
         position: absolute;
         top: 0;
         left: 0;
