:art: Loading animations for all pages

--- a/src/app/courses-overview/courses-overview.component.scss
+++ b/src/app/courses-overview/courses-overview.component.scss
@@ -129,6 +129,7 @@
             padding: 20px 40px;   
             opacity: 0;
             animation-name: fade-in;
+            animation-delay: 0.3s;
             animation-duration: 1s;
             animation-timing-function: ease;
             animation-fill-mode: forwards;  
