--- a/src/app/sites/current/current.component.html
+++ b/src/app/sites/current/current.component.html
@@ -1,7 +1,7 @@
-<app-header-image [image]='backgroundImage' [listId]='currentListShortId' title='Aktuelles'></app-header-image>
+<app-header-image *ngIf="backgroundImage" [image]='backgroundImage' [listId]='currentListShortId' title='Aktuelles'></app-header-image>
 <div class="main-content-container main-content-container-padding">
   <div class="blog-posts main-content">
-    <div *ngFor="let post of posts | async" class="post-container">
+    <div *ngFor="let post of posts" class="post-container">
       <div class="post">
         <a class="post-image-container" [routerLink]="post.routerLink" [ngStyle]="getPostImageBackgroundStyle(post)">
         </a>
