--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="footer-container" *ngIf="footerLoaded">
+<div class="footer-container" *ngIf="footerContentLoaded && mainPageContentLoaded">
   <div class="footer">
     <div class="footer-section-container">
       <div class="footer-section footer-section-contact">
