--- a/src/app/sites/courses/course-information/course-information.component.html
+++ b/src/app/sites/courses/course-information/course-information.component.html
@@ -1,7 +1,7 @@
 <!-- <div class="header-image">
   <app-header-image [image]='backgroundImage' [listId]='coursesListShortId' title='Preise und Stundenpläne'></app-header-image>
 </div> -->
-<div class="courses-content-container main-content-container main-content-container-padding">
+<div class="courses-content-container main-content-container main-content-container-padding" *ngIf="text">
   <div class="courses-content main-content">
     <app-schedule locationInitials='MG'></app-schedule>
     <app-schedule locationInitials='LB'></app-schedule>
