:art: Change cookie button to: okay

--- a/src/app/components/cookies-notification/cookies-notification.component.html
+++ b/src/app/components/cookies-notification/cookies-notification.component.html
@@ -8,7 +8,7 @@
             </div>
             <div class="cookies-notification-buttons-container">
                 <div class="cookies-notification-okay-button" (click)="acceptCookies()">
-                    Lecker Kekse!
+                    Okay
                 </div>
             </div>
         </div>
