--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,6 +1,6 @@
 <div class="main-page-title-video-container">
-    <youtube-player *ngIf="videoId"
-        [videoId]="videoId"
+    <youtube-player *ngIf="youtubeVideoId"
+        [videoId]="youtubeVideoId"
         height='100%'
         width='100%'
         [playerVars]="getPlayerVars()"
