--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -12,7 +12,13 @@ div {
 	//padding-top: 25px;
     //height: 0;
     height: 300px;
+    &.hide {
+        opacity: 0;
+        height: 0px;
+        overflow: hidden;
+    }
     iframe {
+        opacity: 1;
         position: absolute;
         top: 0;
         left: 0;
