:art: Use german for all urls

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -38,10 +38,10 @@
       <a class="navbar-navigation-link" routerLink="/team" (click)="toggleMobileNav()">
         Team
       </a>
-      <a class="navbar-navigation-link" routerLink="/locations" (click)="toggleMobileNav()">
+      <a class="navbar-navigation-link" routerLink="/standorte" (click)="toggleMobileNav()">
         Standorte
       </a>
-      <a class="navbar-navigation-link" routerLink="/contact" (click)="toggleMobileNav()">
+      <a class="navbar-navigation-link" routerLink="/kontakt" (click)="toggleMobileNav()">
         Kontakt
       </a>
     </div>
