--- a/src/app/sites/current/current.component.scss
+++ b/src/app/sites/current/current.component.scss
@@ -15,6 +15,18 @@
                     height: 300px;
                     background-size: cover;
                     background-color: $border-color-dark-2;
+                    @include flexbox();
+                    @include flex-direction(row);
+                    align-content: center;
+                    align-items: center;
+                    text-align: center;
+                    justify-content: center;
+                    .default-icon {
+                        width: 40px;
+                        height: 100px;
+                        background-image: url("../../../resources/Logo.png"); //no-repeat;
+                        background-size: 100% 100%;
+                    }
                 }
                 .post-date {
                     margin-top: 30px;
