Datenschutz Komponente hat jetzt eigenen Link im Footer

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -51,6 +51,9 @@
       <div class="footer-section footer-section-legal">
         <a class="footer-section-heading" routerLink="/impressum">
             Impressum
+        </a><br>
+        <a class="footer-section-heading" routerLink="/datenschutz">
+          Datenschutz
         </a>
         <div class="footer-section-content">
           <div class="footer-section-content-link">Geschützt durch Tanztheater Anita Hanke 2017</div>
