--- a/src/variables.scss
+++ b/src/variables.scss
@@ -8,7 +8,7 @@ $main-text-color: #F6F5F5;
 $main-text-color-on-dark-bg: #ffffff;
 $main-text-color-on-light-bg: #000000;
 $post-seperator-color: #8C8C8C;
-$accent-color-1: #eb484d;
+$accent-color-1: #595959;
 $main-background-color-dark: #000000;
 $main-background-color-imprint: #333333;
 $download-link-color: #dbd6d6;
